feat: added demo deploy to GitHub Pages

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -26,15 +26,17 @@
             ],
             "styles": [
               "src/styles.css"
-            ]
+            ],
+            "outputPath": "dist",
+            "baseHref": "/coach-assistant/"
           },
           "configurations": {
             "production": {
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "3MB",
+                  "maximumError": "5MB"
                 },
                 {
                   "type": "anyComponentStyle",
