--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.1",
     "@nestjs/typeorm": "^11.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "express": "^5.1.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.2.2",
