--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ COACH_ASSISTANT_PORT=3306
 COACH_ASSISTANT_USER=root
 COACH_ASSISTANT_PASSWORD=secret
 COACH_ASSISTANT_DATABASE=coachassistant
+JWT_SECRET=secret
