--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@primeuix/themes": "^1.2.5",
     "@tailwindcss/postcss": "^4.1.14",
     "angular-eslint": "^20.4.0",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.5.6",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
